fix: add text-wrap change subject to deleteMessage function and add overflow

--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,17 @@ body {
     color: #969494;
 }
 
+.contact-message {
+    height: 1.3625rem;
+}
+
 .last-message {
+    width: 250px;
+    height: 2.5rem;
     padding-top: .3125rem;
     font-size: .875rem;
+    overflow: hidden;
+    text-wrap: wrap;
 }
 
 /* #endregion */
@@ -247,7 +255,7 @@ body {
 
 .message {
     width: 20.25rem;
-    height: 3.5rem;
+    padding-top: 16px;
     padding-left: 1.125rem;
     padding-right: .5rem;
     padding-bottom: .3125rem;
@@ -256,6 +264,12 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.message-text {
+    width: 90%;
+    padding-bottom: .6875rem;
+    overflow-wrap: break-word;
 }
 
 .drop-down,
